additional updates to talk

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           <h3>at a bank</h3>
         </section>
         <section data-background="http://i.giphy.com/fPkWsBe1wWPtu.gif">
-          Escaped to Interactive Intelligence
+          <h3>Escaped to Interactive Intelligence</h3>
+          <p class="fragment">and yes, we're hiring...</p>
+          <p class="fragment"><a href="https://inin.com/careers">https://inin.com/careers</a></p>
         </section>
         <section data-background="http://i.giphy.com/14qwRKAyXLEQ9O.gif">
           <h3>Learning Ember at 1.10, coming from java...</h3>
